sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:9: error: not found: value j
     setValeur(j,v)}
               ^