sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
var ecart =(getNombreValeurs()-2/2).toInt
  for(i<- 1 to (getNombreValeurs()-1))
  	{var v=getValeur(i)
   	while(ecart>0 && getValeur(ecart-1)>v){
     	copie(i-ecart,i-2*ecart)
     	ecart=ecart-ecart}
   	setValeur(j,v)}
}